--- a/register.html
+++ b/register.html
@@ -28,11 +28,11 @@
 </head>
 <body>
     <header>
-        <h1>国泰航空 - 注册</h1>
+        <h1>Register - West Kowloon Cultural District</h1>
     </header>
     <div class="form-container">
-        <h3>注册</h3>
-        <label for="title">称呼：</label>
+        <h3>Register</h3>
+        <label for="title">Title:</label>
         <select id="title">
             <option value="Miss">Miss</option>
             <option value="Ms">Ms</option>
@@ -43,7 +43,7 @@
         <input type="text" id="firstname" placeholder="First Name">
         <input type="email" id="email" placeholder="Email">
         <input type="text" id="phone" placeholder="Mobile Number">
-        <button onclick="register()">注册</button>
+        <button onclick="register()">Register</button>
     </div>
 
     <script>
