--- a/WestK.html
+++ b/WestK.html
@@ -59,7 +59,7 @@
     <script charset="UTF-8">
     var sensors = window['sensorsDataAnalytic201505'];
     sensors.init({
-      server_url: 'http://123.57.221.145:8106/sa?project=production',
+      server_url: 'https://westkdemodatasink.sensorsdata.cn/sa?project=production',
       heatmap:{scroll_notice_map:'not_collect'},
       use_client_time:true,
       send_type:'beacon',
